manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowiki-deployment
  labels:
    app: gowiki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gowiki
  template:
    metadata:
      labels:
        app: gowiki
    spec:
      volumes: 
      - name: azfile-volume
        persistentVolumeClaim:
          claimName: gowiki-azfile-pvc
      containers:
      - name: gowiki
        image: forchaladtest/mygowiki:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
        volumeMounts:
        - mountPath: /app/pages
          name: azfile-volume
