manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowiki-service
  labels:
    app: gowiki
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8888
  selector:
    app: gowiki
