manifests/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowiki-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: gowiki
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: gowiki.husoft.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gowiki-service
            port:
              number: 80
